nixidy/generated/prod/argo-rollouts/Deployment-argo-rollouts-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: rollouts-dashboard
    app.kubernetes.io/instance: argo-rollouts
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argo-rollouts
    app.kubernetes.io/part-of: argo-rollouts
  name: argo-rollouts-dashboard
  namespace: cicd
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: rollouts-dashboard
      app.kubernetes.io/instance: argo-rollouts
      app.kubernetes.io/name: argo-rollouts
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: rollouts-dashboard
        app.kubernetes.io/instance: argo-rollouts
        app.kubernetes.io/name: argo-rollouts
    spec:
      containers:
        - args:
            - dashboard
            - --loglevel=info
            - --kloglevel=0
          image: quay.io/argoproj/kubectl-argo-rollouts:v1.9.0@sha256:86e1040c5d12cf4ec5c0d6205c5ca9f51677ad8ddc478a1f0790de9296f190e7
          imagePullPolicy: IfNotPresent
          name: argo-rollouts-dashboard
          ports:
            - containerPort: 3100
              name: dashboard
          resources: {}
          securityContext: {}
      securityContext:
        runAsNonRoot: true
      serviceAccountName: argo-rollouts-dashboard
