nixidy/generated/prod/argo-rollouts/HTTPRoute-argo-rollouts.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts
  namespace: cicd
spec:
  hostnames:
    - rollouts.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: oauth2-proxy
          namespace: identity
          port: 4180
